fixed work spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ nav h3 {
 .grid-container {
     display: grid;
     margin: 40px 0 0 75px;
-    max-width: 75%;
+    min-width: 70%;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-flow: dense;
     grid-gap: 1em;
